fixed a few bugs. -Tabs for renamed files was given an incorrect id after the second rename attempt. -User could drag toolbar under the tabs header. -Default root placeholder was visible during new project select.

--- a/ClientFiles/css/IDEOnline.css
+++ b/ClientFiles/css/IDEOnline.css
@@ -17,7 +17,7 @@
     left: 60%;
     min-width: 750px;
     background-color: #fff;
-    z-index: 2;
+    z-index: 3;
     user-select: none;
     -moz-user-select: none;
 }
